<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reference"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="humblepotato2.packagesigner.Reference">

    <include android:id="@+id/toolbar" layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/ref_kellinwood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ref_kellinwood"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/ref_zipSignerDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ref_kellinwood"
                android:layout_marginTop="12dp"
                android:text="@string/ref_zipSignerDescription"/>
            <TextView
                android:id="@+id/ref_appium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ref_zipSignerDescription"
                android:layout_marginTop="24dp"
                android:text="@string/ref_appium"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/ref_signApkDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ref_appium"
                android:layout_marginTop="12dp"
                android:text="@string/ref_signApkDescription"/>
            <TextView
                android:id="@+id/ref_rogerKeays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ref_signApkDescription"
                android:layout_marginTop="24dp"
                android:text="@string/ref_rogerKeays"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/ref_fileBrowserDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ref_rogerKeays"
                android:layout_marginTop="12dp"
                android:text="@string/ref_fileBrowserDescription"/>
            <TextView
                android:id="@+id/ref_apache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ref_fileBrowserDescription"
                android:layout_marginTop="24dp"
                android:text="@string/ref_apache"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/ref_commonsIODescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ref_apache"
                android:layout_marginTop="12dp"
                android:text="@string/ref_commonsIODescription"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
