<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/instructions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="humblepotato2.packagesigner.Instructions">

    <include android:id="@+id/toolbar" layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/ins_howToUse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ins_howToUse"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/ins_howToUseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ins_howToUse"
                android:layout_marginTop="12dp"
                android:text="@string/ins_howToUseDescription"/>
            <TextView
                android:id="@+id/ins_browse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ins_howToUseDescription"
                android:layout_marginTop="24dp"
                android:text="@string/ins_browse"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/ins_browseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ins_browse"
                android:layout_marginTop="12dp"
                android:text="@string/ins_browseDescription"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
