<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="humblepotato2.packagesigner.PackageSigner">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include android:id="@+id/toolbar" layout="@layout/toolbar"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/btn_package"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="@string/btn_package"/>

                <Button
                    android:id="@+id/btn_output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/btn_output"/>

                <TextView
                    android:id="@+id/inp_package"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_package"
                    android:layout_marginBottom="6dp"
                    android:text="@string/inp_package"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/inp_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inp_package"
                    android:layout_marginBottom="32dp"
                    android:hint="@string/inp_field"
                    android:inputType="text"
                    android:scrollbars="horizontal"
                    android:scrollHorizontally="true"/>

                <TextView
                    android:id="@+id/out_package"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inp_field"
                    android:layout_marginBottom="6dp"
                    android:hint="@string/out_package"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/out_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/out_package"
                    android:hint="@string/out_field"
                    android:inputType="text"
                    android:scrollbars="horizontal"
                    android:scrollHorizontally="true"/>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_sign"
        app:fabSize="normal"/>
</android.support.design.widget.CoordinatorLayout>
